--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.0",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.54.0",
     "eslint-config-import": "^0.13.0",
     "eslint-config-standard": "^17.1.0",
@@ -33,6 +33,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-standard": "^5.0.0",
+    "eslint-plugin-tsconfig-paths": "^1.0.0",
     "husky": "^8.0.3",
     "nodemon": "^3.0.1",
     "prettier": "^3.1.0",
