--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.10",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.0",
+    "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.54.0",
@@ -35,10 +37,13 @@
     "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-tsconfig-paths": "^1.0.0",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.1.0",
     "pretty-quick": "^3.1.3",
     "prisma": "^5.6.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "*"
   },
@@ -53,7 +58,8 @@
     "prepare": "npx husky install",
     "check-types": "npx tsc --noEmit --pretty",
     "check-lint": "npx eslint . --ext ts --ext tsx --ext js",
-    "check-format": "npx prettier . --check"
+    "check-format": "npx prettier . --check",
+    "test": "npx jest --detectOpenHandles"
   },
   "husky": {
     "hooks": {
